--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/contracts": "^9",
-        "illuminate/console": "^9"
+        "illuminate/contracts": "^9|^10",
+        "illuminate/console": "^9|^10"
     },
     "extra": {
         "laravel": {
